[B]Version 1.1.110[/B]
- hentaistream - fix search
- erogarga - fix listing
- xfreehd - fix Login
- hentaistream - fix tags