@@ -3,3 +3,5 @@
 - erogarga - fix listing
 - xfreehd - fix Login
 - hentaistream - fix tags
+- voyeur-house.life - new domain (voyeur-house.cc)
+- voyeurhouse.life - new domain (reallifecams.in)
